# quadgrid

./: .gitignore  CMakeLists.txt  Doxyfile  NOTICE  README.md  custom_header.html
app/: app_gauss_legendre_grid.cpp  app_legendre.cpp
docs/: constant_8hpp.html  constant_8hpp.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  gauss__legendre__grid_8hpp__incl.map  gauss__legendre__grid_8hpp_source.html  globals.html  graph_legend.html  index.html  legendre_8hpp_source.html  namespacemembers_vars.html  namespacequadgrid.html  namespacequadgrid_a47a8db2386e60b76228b34ca3d3d2719_icgraph.map  namespacequadgrid_ad27f260822d5c82dc1443b07709fa23a_cgraph.map  namespacequadgrid_ad27f260822d5c82dc1443b07709fa23a_cgraph.md5  namespaces.html  namespaces.js  spherical__harmonic_8hpp.html  spherical__harmonic_8hpp.js  spherical__harmonic_8hpp__incl.md5  spherical__harmonic_8hpp_source.html  unit__sphere__grid__gauss__legendre_8hpp__incl.md5  unit__sphere__grid__lebedev_8hpp.html
docs/html/: annotated.html  annotated_dup.js  classes.html  constant_8hpp.html  constant_8hpp__dep__incl.map  constant_8hpp__dep__incl.md5  constant_8hpp_source.html  dir_000002_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_aa32d06abe294a34fb4ee228311bd5f0.html  dir_aa32d06abe294a34fb4ee228311bd5f0.js  files.html  functions.html  (+479 more)
src/: gauss_legendre_grid.cpp  legendre.cpp  spherical_harmonic.cpp  unit_sphere_grid_gauss_legendre.cpp  unit_sphere_grid_lebedev.cpp
test/: test_gauss_legendre_grid.cpp  test_gauss_legendre_grid_orthogonality.cpp  test_unit_sphere_grid_gauss_legendre.cpp  test_unit_sphere_grid_lebedev.cpp
(+36 files in other folders)
